Update SEO description in index.htmlfd
Removed the mention of 'job boards' from the SEO description.

--- a/index.html
+++ b/index.html
@@ -529,8 +529,8 @@
             </div>
             
             <p style="margin-top: 30px; opacity: 0.8;">
-                Nathan Fenina - Expert SEO Technique & Acquisition<br>
-                Spécialiste des audits post-migration et job boards
+                Nathan Fenina - Expert SEO Technique <br>
+            
             </p>
         </div>
     </section>
